# enhanced-claude-code

./: .build-state-v3-enhanced.json  .gitignore  .mcp.json  CLAUDE.md  PR-summary.md  README-v3.md  README.md  ai-planning-prompt.md  awesome-researcher-complete-spec.md  build-phases-v3.json  build-strategy-v3.md  builder-claude-code-builder-enhanced.sh  builder-claude-code-builder-v2.3.sh  builder-claude-code-builder-v3.sh  builder-claude-code-builder.sh  claude-code-builder-researcher.py  claude-code-builder-v3-enhanced-spec.md  claude-code-builder-v3-spec.md  cost-tracker-comparison.md  cost-tracker-enhancement.patch  enhancement-plan.md  execution-checklist.md  implementation-phases.md  implementation-task-breakdown.md  instructions.md  phase1-technical-guide.md  phases.md  prompt.md  research-instructions-v3.md  tasks.md  test-claude-code.sh  test-json-parser.sh  test-manager-v3.sh  test-mcp.sh  test-mcp2.sh  test-phase-runner.py  test-prompt.txt  test-spec.md  test-todo-app-spec.md  test-v3-syntax.sh  (+1 more)
claude-code-builder/: .claude-code-builder.yaml  .gitignore  CLAUDE.md  NON_PRODUCTION_CODE_AUDIT.md  PROJECT_STATUS.md  README.md  build-awesome-researcher-cli.sh  build-awesome-researcher.py  complex_test_spec.md  fix_all_dataclasses.py  fix_dataclasses.py  generate_awesome_phases.py  invalid_spec.md  pyproject.toml  requirements.txt  run-claude-cli-build.py  setup.py  test_compilation.py  test_spec.md  verify_full_compilation.py
claude-code-builder/claude_code_builder/: __init__.py  __main__.py  main.py
claude-code-builder/claude_code_builder/ai/: __init__.py  analyzer.py  complexity_estimator.py  dependency_resolver.py  optimization.py  phase_generator.py  planner.py  risk_assessor.py  task_generator.py
claude-code-builder/claude_code_builder/cli/: __init__.py  cli.py  commands.py  config_manager.py  plugins.py
claude-code-builder/claude_code_builder/config/: __init__.py  settings.py
claude-code-builder/claude_code_builder/docs/: __init__.py  api_generator.py  examples_generator.py  readme.py  user_guide.py
claude-code-builder/claude_code_builder/examples/: __init__.py  advanced_project.py  custom_instructions.py  plugin_example.py  simple_project.py
claude-code-builder/claude_code_builder/exceptions/: __init__.py  base.py
claude-code-builder/claude_code_builder/execution/: __init__.py  checkpoint.py  orchestrator.py  phase_executor.py  real_executor.py  recovery.py  state_manager.py  task_runner.py  validator.py
claude-code-builder/claude_code_builder/instructions/: __init__.py  engine.py  executor.py  filter.py  loader.py  parser.py  priority.py  validator.py
claude-code-builder/claude_code_builder/logging/: __init__.py  logger.py
claude-code-builder/claude_code_builder/mcp/: __init__.py  analyzer.py  config_generator.py  discovery.py  installer.py  recommender.py  registry.py  validator.py
claude-code-builder/claude_code_builder/memory/: __init__.py  cache.py  context_accumulator.py  error_context.py  query_engine.py  recovery.py  serializer.py  store.py
claude-code-builder/claude_code_builder/models/: __init__.py  base.py  cost.py  custom_instructions.py  memory.py  monitoring.py  phase.py  project.py  research.py  testing.py  validation.py
claude-code-builder/claude_code_builder/monitoring/: __init__.py  alert_manager.py  cost_monitor.py  dashboard.py  error_tracker.py  performance_monitor.py  progress_tracker.py  stream_parser.py
claude-code-builder/claude_code_builder/research/: __init__.py  base_agent.py  best_practices_advisor.py  coordinator.py  devops_specialist.py  performance_engineer.py  quality_assurance_expert.py  security_specialist.py  solutions_architect.py  synthesizer.py  technology_analyst.py
claude-code-builder/claude_code_builder/sdk/: __init__.py  client.py  context_manager.py  error_handler.py  metrics.py  parser.py  session.py  tools.py
claude-code-builder/claude_code_builder/testing/: __init__.py  analyzer.py  executor.py  framework.py  report_generator.py
claude-code-builder/claude_code_builder/testing/stages/: cli_test.py  functional_test.py  installation_test.py  performance_test.py  recovery_test.py
claude-code-builder/claude_code_builder/tests/: __init__.py  conftest.py  test_ai_planner.py  test_cli.py  test_execution.py  test_integration.py  test_mcp_integration.py  test_validation.py
claude-code-builder/claude_code_builder/ui/: charts.py  formatter.py  menus.py  progress_bars.py  status_panel.py  tables.py  terminal.py
claude-code-builder/claude_code_builder/utils/: __init__.py  cache_manager.py  config_loader.py  constants.py  error_handler.py  file_handler.py  json_utils.py  path_utils.py  string_utils.py  template_engine.py
claude-code-builder/claude_code_builder/validation/: __init__.py  dependency_checker.py  documentation_checker.py  quality_analyzer.py  report_generator.py  security_scanner.py  syntax_validator.py  test_generator.py
claude-code-builder/docs/: API_REFERENCE.md  ARCHITECTURE.md
claude-code-builder/examples/: fullstack-app.md  simple-cli.md  web-api.md
claude_code_builder/ui/: __init__.py  (+1 more)
diagrams/: architecture.mmd  build-phases.mmd  command-generation.mmd  mcp-integration.mmd  memory-flow.mmd  orchestration-flow.mmd  resume-flow.mmd  sequence.mmd
logs/: sample-execution.md
test-build/: final-test-build.sh  monitor-build-continuous.sh  monitor-build.sh  monitor-new-build.sh  project_setup_instructions.md  run-debug-build.sh  simple-spec.md  test-simple-build.sh
test-build-output/: direct-build-test.sh  fast-monitor.sh  quick-test.sh  run-build-test.sh
test-build-output/task-tracker-api/: .gitignore  README.md  pyproject.toml  requirements.txt
test-build-output/task-tracker-api/src/: auth.py  database.py  main.py  models.py  schemas.py
test-build-output/task-tracker-api/src/routes/: __init__.py  tasks.py
test-build/task-tracker-api/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
test-build/task-tracker-api/src/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
test-build/task-tracker-api/tests/: __init__.py
(+2 files in other folders)
